<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title=""
        android:id="@+id/test">
        <menu>
            <item
                android:id="@+id/new_group"
                android:title="@string/new_group"
                android:icon="@drawable/ic_baseline_people_outline_24"
                />
            <item
                android:id="@+id/contacts"
                android:title="@string/contacts"
                android:icon="@drawable/ic_baseline_person_outline_24"
                />
            <item
                android:id="@+id/cals"
                android:title="@string/cals"
                android:icon="@drawable/ic_baseline_call_24"
                />
            <item
                android:id="@+id/peoples_nearby"
                android:title="@string/people_nearby"
                android:icon="@drawable/ic_baseline_near_me_24"
                />
            <item
                android:id="@+id/favourites"
                android:title="@string/favourites"
                android:icon="@drawable/ic_baseline_bookmarks_24"
                />
            <item
                android:id="@+id/settings"
                android:title="@string/settings"
                android:icon="@drawable/ic_baseline_settings_24"
                />
        </menu>
    </item>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/invite"
                android:title="@string/invite"
                android:icon="@drawable/ic_baseline_person_add_24"
                />
            <item
                android:id="@+id/mygram_features"
                android:title="@string/mygram_features"
                android:icon="@drawable/ic_baseline_info_24"
                />
        </menu>
    </item>
</menu>