<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="?attr/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/confirm_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_confirm_code"
        android:textSize="40sp"
        android:layout_marginTop="@dimen/signInTitle_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/code_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_code_title"
        android:layout_marginTop="100dp"
        android:hint="@string/confirm_code">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:maxLength="6"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/confirm_button"
        app:layout_constraintTop_toBottomOf="@+id/code_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/ok"
        android:textSize="18sp"
        android:background="?attr/colorOnPrimary"/>
</androidx.constraintlayout.widget.ConstraintLayout>