<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Settings"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="?attr/colorPrimaryVariant"
        android:orientation="vertical"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="?attr/colorOnPrimary"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            android:background="?attr/colorPrimary"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="?attr/colorPrimary">
            <ImageView
                android:id="@+id/account_image_settings"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_account_circle_24"/>
            <TextView
                android:id="@+id/account_name_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_name"
                android:layout_marginTop="30dp"
                android:layout_marginStart="120dp"
                />
            <TextView
                android:id="@+id/account_state_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_state"
                android:layout_marginTop="55dp"
                android:layout_marginStart="120dp"/>

        </FrameLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="?attr/colorSecondary"
            android:layout_marginBottom="10dp"
            >

            <TextView
                style="@style/header_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="?attr/colorSecondary"
            android:layout_marginBottom="10dp"
            >

            <TextView
                style="@style/header_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="?attr/colorSecondary"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <TextView
                style="@style/header_style"
                android:text="@string/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:text="about"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>