<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AccountInfoFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/settings"
            app:titleTextColor="@color/white_lite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/confirm_code_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="?attr/colorPrimary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirm_code_button"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="24dp"
                android:text="@string/ok"
                app:layout_constraintStart_toEndOf="@+id/code_input"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/code_input"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="88dp"
                android:layout_marginTop="24dp"
                android:background="@color/white_lite"
                android:gravity="center"
                android:hint="@string/sms_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="56dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/account_image_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="48dp"
                tools:src="@drawable/ic_baseline_account_circle_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/add_photo_background"
                android:layout_width="64dp"
                android:layout_height="74dp"
                android:layout_marginStart="340dp"
                android:layout_marginBottom="4dp"
                android:src="@color/white_lite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/add_photo"
                android:layout_width="68dp"
                android:layout_height="58dp"
                android:layout_marginStart="337dp"
                android:layout_marginBottom="14dp"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_add_a_photo_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/account_name_profile_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="48dp"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@+id/account_image_profile"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/account_name" />

            <TextView
                android:id="@+id/account_state_profile_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginBottom="60dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/account_image_profile"
                tools:text="@string/account_state" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/account_title_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="22dp"
            android:text="@string/account"
            android:textColor="@color/header"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/phone_container_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_title_profile">

            <TextView
                android:id="@+id/account_number_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="+1111111111" />

            <TextView
                android:id="@+id/set_phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:text="@string/click_here_to_set_phone_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_number_profile" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/set_phone_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/name_container_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_container_profile">

            <TextView
                android:id="@+id/account_name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/account_name"/>

            <TextView
                android:id="@+id/set_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:text="@string/click_here_to_set_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_name_profile" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/set_name_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/account_description_profile_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_container_profile">

            <TextView
                android:id="@+id/account_description_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/account_description" />

            <TextView
                android:id="@+id/set_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:text="@string/tell_us_about_yourself"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_description_profile" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/set_description_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/sign_out_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:textColor="@color/red"
            android:text="@string/sign_out"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_description_profile_container" />

        <TextView
            android:id="@+id/delete_account_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/delete_account"
            android:textColor="@color/red"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_out_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>