<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/chat_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

            <include
                android:id="@+id/toolbar_info"
                layout="@layout/toolbar_single_chat"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/message_edit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/colorPrimary"
            android:hint="@string/message"
            android:paddingStart="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/send_image_message"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/colorPrimary"
            android:contentDescription="@string/send_image_message"
            android:foregroundGravity="center"
            android:src="@drawable/ic_baseline_image_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/send_message"
            android:layout_width="45dp"
            android:layout_height="60dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="?attr/colorPrimary"
            android:contentDescription="@string/send_message"
            android:foregroundGravity="center"
            android:src="@drawable/ic_baseline_send_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?attr/colorSecondary"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/message_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chat_toolbar"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_text_message"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>